fixing contrast issue in footer

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -7,10 +7,15 @@
         margin: 0.5em 0;
     }
 
+    // to use hangingindent, surround text in a div
     .hangingindent {
         padding-left: 1.5em ;
         text-indent: -1.5em ;
       }
+
+    .site-footer {
+        color: #5c5962;
+    }
     
 }
 
